css/style.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

body {
  background-color: #a7d0cf;
  background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23cce4e4' fill-opacity='0.14' fill-rule='evenodd'/%3E%3C/svg%3E");
  flex-wrap: wrap;
  font-family: "Playfair Display", serif;
  justify-content: center;
  margin: 0 auto;
  padding-top: 0.5rem;
  width: 100%;
  height: 100%;
}

/* Font styling for character name in text box */
span {
  color: #f9b233;
}

/* Styling for game controls */
.currentGame {
  font-size: 12px;
  font-family: "Lato", sans-serif;
  padding: 0.75rem;
  text-transform: uppercase;
}

#nameInput {
  margin: 10px 0px;
}

input[type="text"] {
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #c0c0c0;
  color: white;
  font-size: 14px;
  font-family: "Lato", sans-serif;
  text-transform: uppercase;
}

/* Universal button stylings */
button:hover {
  background-color: #e3a5a3;
}

button:active,
button:focus {
  background-color: #f9b233;
}

footer {
  background-color: white;
  bottom: 0;
  height: 2rem;

  width: 100%;
  text-align: center;
}

/* Responsive view for screens 992px and larger */
@media only screen and (min-width: 992px) {
  .siteContainer {
    display: grid;
    grid-template-areas:
      "logo logo logo"
      "currentGame frog buttons"
      ". textBox buttons";
    gap: 20px 50px;
    margin: 0 auto;
    width: 1200px;
  }

  .logo {
    grid-area: logo;
    display: flex;
    place-self: center;
    padding: 0 5rem;
    width: 70%;
  }

  .kfbLogo img {
    max-width: 100%;
  }
  .currentGame {
    grid-area: currentGame;
    justify-self: end;
  }

  /* Styling for character container */
  .svgContainer {
    border: none;
    border-radius: 24px;
    box-shadow: 0px 3px 6px #8b8b8b;
    grid-area: frog;
    place-self: center;
    height: 500px;
    margin-top: 20px;
    width: 500px;
  }

  .controls {
    grid-area: buttons;
    display: flex;
    flex-direction: column;
  }

  /* Interactive Button - Styling */

  .button {
    background-color: #bedddc;
    border-radius: 24px;
    border: none;
    box-shadow: 0px 3px 6px #8b8b8b;
    font-family: "Lato", sans-serif;
    font-size: 14px;
    margin-bottom: 15px;
    height: 30px;
    width: 120px;
  }
}

/* Responsive Design for tablet screens */
@media screen and (min-width: 601px) and (max-width: 991px) {
  .siteContainer {
    display: grid;
    grid-template-rows: auto fit-content(100%);
    grid-template-columns: 70% 30%;
    grid-template-areas:
      "currentGame currentGame"
      "logo logo"
      "frog frog"
      "textBox textBox"
      "buttons buttons";
    gap: 10px;
  }

  .logo {
    grid-area: logo;
    justify-content: center;
    align-items: center;
    padding: 0 7rem;
  }

  .kfbLogo img {
    max-width: 100%;
    padding: 0 10px;
  }
  .currentGame {
    grid-area: currentGame;
    align-self: center;
    justify-self: start;
  }

  /* Styling for character tablet container */
  .svgContainer {
    border: none;
    border-radius: 24px;
    box-shadow: 0px 3px 6px #8b8b8b;
    grid-area: frog;
    justify-self: center;
    height: 400px;
    width: 400px;
  }

  /* Styling for character chat box */

  /* Interactive Button - Styling */
  .controls {
    grid-area: buttons;
    display: flex;

    flex-wrap: wrap;
    column-gap: 0.5rem;
    padding: 10px;
  }

  .button {
    background-color: #bedddc;
    border-radius: 24px;
    border: none;
    box-shadow: 0px 3px 6px #8b8b8b;
    font-family: "Lato", sans-serif;
    font-size: 16px;
    margin-bottom: 15px;
    height: 30px;
    width: 130px;
  }
}

/* Responsive Design for mobile screens */
@media screen and (max-width: 600px) {
  .siteContainer {
    display: grid;
    grid-template-areas:
      "currentGame currentGame"
      "logo logo"
      "frog frog"
      "textBox textBox"
      "buttons buttons";
  }

  .logo {
    grid-area: logo;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 3rem;
  }

  .kfbLogo img {
    max-width: 100%;
    padding: 0 5px;
  }

  .currentGame {
    grid-area: currentGame;
  }

  /* Styling for character container */
  .svgContainer {
    border: none;
    border-radius: 24px;
    box-shadow: 0px 3px 6px #8b8b8b;
    grid-area: frog;
    justify-self: center;
    height: 300px;
    width: 300px;
  }

  /* Styling for character chat box */

  /* Interactive Button - Styling */
  .controls {
    grid-area: buttons;
    display: flex;

    flex-wrap: wrap;
    column-gap: 0.5rem;
    padding: 10px;
    text-align: center;
  }

  .controlsContainer {
    max-height: 100px;
    max-width: 599px;
    text-align: center;
  }

  .button {
    background-color: #bedddc;
    border-radius: 24px;
    border: none;
    box-shadow: 0px 3px 6px #8b8b8b;
    font-family: "Lato", sans-serif;
    font-size: 14px;

    margin-bottom: 15px;
    height: 30px;
    width: 100px;
  }
}

/* Hide Character Element Layers */
#blushLeft,
#blushRight,
#mouthAngry,
#mouthDeadTongue,
#mouthHungryTongue,
#mouthSick,
#eyelidLeft,
#eyelidRight,
#eyesDead,
#eyesHungry,
#sweatbeads {
  opacity: 0;
}

